--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,13 +36,8 @@ steps:
   displayName: 'Set up the Go workspace'
 
 - script: |
-    go version
-    go get -v -t -d ./...
-    if [ -f Gopkg.toml ]; then
-        curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-        dep ensure
-    fi
-    go build -v .
+    go get
+    go build
   displayName: 'Get dependencies, then build'
   workingDirectory: '$(modulePath)'
 
