--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -1,8 +1,8 @@
-name: 🎉 Release Binary
+---
+name: Run Pre-Commit hooks
 on:
-  create:
-    tags:
-      - v*
+  push:
+  pull_request:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
     inputs:
@@ -20,30 +20,20 @@ on:
         default: "true"
 
 jobs:
-  release:
-    name: Build and configure the basic salt test environment
+  pre-commit:
+    name: Run pre-commit
     runs-on: ubuntu-latest
     steps:
       - name: Set up git repository
         uses: actions/checkout@v2
 
-      - name: Install golang
-        uses: actions/setup-go@v2
+      - name: Install python for pre-commit
+        uses: actions/setup-python@v2
         with:
-          go-version: 1.17
+          python-version: '3.7'
 
-      - name: "Create release on GitHub"
-        uses: goreleaser/goreleaser-action@v2
-        with:
-          args: "release --rm-dist"
-          version: latest
-
-      - name: Get tag
-        id: tag
-        run: echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
-
-      - name: "Update the package found at https://pkg.go.dev"
-        run: curl https://proxy.golang.org/github.com/${{ github.repository_owner	}}/${{ github.event.repository.name }}/@v/${{ steps.branch_name.outputs.SOURCE_TAG }}.info
+      - name: Run pre-commit
+        uses: pre-commit/action@v2.0.3
 
       - name: Setup tmate session if any part of the action fails
         if: ${{ failure() }}
