--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -34,6 +34,6 @@ jobs:
       - name: Run unit tests
         run: go test -v -race ./...
 
-      - name: Setup tmate session if any part of the action fails
-        if: ${{ failure() }}
-        uses: mxschmitt/action-tmate@v3
+      # - name: Setup tmate session if any part of the action fails
+      #   if: ${{ failure() }}
+      #   uses: mxschmitt/action-tmate@v3
