Add code coverage action

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 # File created for debugging with vscode
 mage_output_file.go
+
 # mage binary
 magefile
+
+# Code coverage output file
+coverage-all.out
