Install pre-commit in tests

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -26,6 +26,9 @@ jobs:
       - name: Install mage
         run: go install github.com/magefile/mage@latest
 
+      - name: Install pre-commit
+        run: brew install pre-commit
+
       - name: Compile magefile
         run: mage -d .mage/ -compile ../magefile
 
