--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,30 +3,8 @@ before:
   hooks:
     - go mod tidy
 
-builds:
-  - env:
-      - CGO_ENABLED=0
-    goos:
-      - windows
-      - linux
-      - darwin
-    goarch:
-      - amd64
-      - 386
-      - arm
-      - arm64
-    ignore:
-      - goos: darwin
-        goarch: "386"
-      - goos: windows
-        goarch: "arm"
-      - goos: windows
-        goarch: "arm64"
-
-archives:
-  - format: zip
-    replacements:
-      darwin: macOS
+build:
+  skip: true
 
 checksum:
   algorithm: sha256
