--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           go-version: 1.18
 
+      - name: Fix GOPATH
+        run: export PATH=$PATH:$(go env GOPATH)/bin
+
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
