--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Set up git repository
         uses: actions/checkout@v2
 
+      - name: Fetch all tags
+        run: git fetch --force --tags
+
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
@@ -26,6 +29,6 @@ jobs:
         with:
           distribution: goreleaser
           version: latest
-          args: release --rm-dist --release-notes .hooks/go-release-notes.md
+          args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
