--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,13 +16,13 @@ repos:
         entry: yamllint --strict -c .hooks/linters/.yaml-lint.yaml
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v2.7.1
+    rev: v3.0.0-alpha.0
     hooks:
       - id: prettier
         files: \.(json|md|yaml|yml)$
 
   - repo: https://github.com/jumanjihouse/pre-commit-hooks
-    rev: 2.1.6
+    rev: 3.0.0
     hooks:
       - id: script-must-have-extension
         name: Ensure shell scripts end with .sh
@@ -57,12 +57,12 @@ repos:
         files: '\.go$'
 
   - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.32.0
+    rev: v0.32.2
     hooks:
       - id: markdownlint
 
   - repo: https://github.com/codespell-project/codespell
-    rev: v2.1.0
+    rev: v2.2.1
     hooks:
       - id: codespell
         entry: codespell -q 3 -f --skip=".git,.github" README.md docs/* cmd/*
