--- a/.github/workflows/pre-commit-update.yml
+++ b/.github/workflows/pre-commit-update.yml
@@ -1,5 +1,5 @@
 ---
-name: Pre-commit auto-update
+name: Pre-commit
 on:
   pull_request:
   push:
@@ -37,11 +37,14 @@ jobs:
       - name: Compile magefile
         run: mage -d .mage/ -compile ../magefile
 
-      - name: Install pre-commit hooks
+      - name: Install dependencies
         run: ./magefile installDeps
 
-      - name: Run pre-commit autoupdate action
-        uses: browniebroke/pre-commit-autoupdate-action@main
+      - name: Install, update, and run pre-commit hooks
+        run: |
+          pip3 install pre-commit
+          pre-commit autoupdate
+          pre-commit run --all-files
 
       - name: Create Pull Request with updates
         uses: peter-evans/create-pull-request@v4
