--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -24,16 +24,13 @@ jobs:
       - name: Install mage
         run: go install github.com/magefile/mage@latest
 
-      - name: Compile magefile
-        run: mage -d .mage/ -compile ../magefile
-
       - name: Set git config
         run: |
           git config --global user.name "John Doe"
           git config --global user.email johndoe@example.com
 
       - name: Install pre-commit hooks
-        run: ./magefile installDeps
+        run: mage installDeps
 
       - name: Run pre-commit
         uses: pre-commit/action@v3.0.0
