--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,12 +6,12 @@
     {
       "label": "create mage_output_file.go and run code to debug",
       "type": "shell",
-      "command": "mage -d .mage --keep runPreCommit"
+      "command": "mage --keep runPreCommit"
     },
     {
       "label": "delete mage_output_file.go",
       "type": "shell",
-      "command": "rm -f .mage/mage_output_file.go"
+      "command": "rm -f magefiles/mage_output_file.go"
     }
   ]
 }
