--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,9 +5,12 @@ repos:
     hooks:
       - id: check-case-conflict
       - id: check-merge-conflict
+      - id: check-symlinks
       - id: end-of-file-fixer
       - id: trailing-whitespace
       - id: check-added-large-files
+      - id: detect-private-key
+      - id: check-shebang-scripts-are-executable
 
   - repo: https://github.com/adrienverge/yamllint.git
     rev: v1.28.0
@@ -29,6 +32,14 @@ repos:
         types: [shell]
       - id: shellcheck
       - id: shfmt
+      # Configuration in .mdlrc and .hooks/linters/mdstyle.rb
+      - id: markdownlint
+
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.2.2
+    hooks:
+      - id: codespell
+        entry: codespell -q 3 -f --skip=".git,.github" README.md docs/* cmd/*
 
   - repo: https://github.com/dnephin/pre-commit-golang
     rev: v0.5.1
@@ -50,19 +61,15 @@ repos:
         entry: .hooks/go-no-replacement.sh
         language: script
         files: go.mod
+
       - id: go-unit-tests
         name: Go unit tests
         language: script
         entry: .hooks/go-unit-tests.sh short
         files: '\.go$'
 
-  - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.32.2
-    hooks:
-      - id: markdownlint
-
-  - repo: https://github.com/codespell-project/codespell
-    rev: v2.2.2
-    hooks:
-      - id: codespell
-        entry: codespell -q 3 -f --skip=".git,.github" README.md docs/* cmd/*
+      - id: go-vet
+        name: Run go vet
+        language: script
+        entry: .hooks/go-vet.sh
+        files: '\.go$'
