--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -53,7 +53,7 @@ jobs:
       - name: Create Pull Request with updates
         uses: peter-evans/create-pull-request@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.BOT_TOKEN }}
           base: main
           branch: update/pre-commit-hooks
           title: Update pre-commit hooks
