--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -42,6 +42,11 @@ jobs:
       - name: Install dependencies
         run: pip3 install keepercommander
 
+      - name: Install changelog gh cli extension
+        run: gh extension install chelnak/gh-changelog
+        env:
+          GH_TOKEN: ${{ github.token }}
+
       - name: Generate the coverage output
         run: |
           bash .hooks/go-unit-tests.sh coverage
