--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,9 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base"]
+  "extends": ["config:base"],
+  "automergeType": "pr",
+  "prCreation": "immediate",
+  "pre-commit": {
+    "enabled": true
+  }
 }
