--- a/.github/labeler.yaml
+++ b/.github/labeler.yaml
@@ -1,3 +1,10 @@
 ---
 area/github:
   - ".github/**/*"
+
+area/pre-commit:
+  - ".pre-commit-config.yaml"
+  - ".hooks/**/*"
+
+area/go:
+  - "*.go"
