--- a/.github/labels.yaml
+++ b/.github/labels.yaml
@@ -12,6 +12,7 @@
   color: "7BD7E0"
   description: >-
     Changes made to go resources
+
 # Renovate
 - name: renovate/container
   color: "ffc300"
@@ -19,6 +20,7 @@
   color: "ffc300"
 - name: renovate/github-release
   color: "ffc300"
+
 # Semantic Type
 - name: type/digest
   color: "FFEC19"
@@ -30,9 +32,7 @@
   color: "F6412D"
 - name: type/break
   color: "F6412D"
-# Release Issue
-- name: image-not-found
-  color: "ee0701"
+
 # Uncategorized
 - name: bug
   color: "ee0701"
@@ -42,9 +42,7 @@
   color: "F4D1B7"
 - name: enhancement
   color: "84b6eb"
-- name: broken-links
-  color: "7B55D7"
 - name: question
+  description: >-
+    Clarification and/or additional information required to move forward
   color: "cc317c"
-- name: community
-  color: "0e8a16"
