New labels for v2

--- a/.github/labeler.yaml
+++ b/.github/labeler.yaml
@@ -6,13 +6,46 @@ area/pre-commit:
   - ".pre-commit-config.yaml"
   - ".hooks/**/*"
 
-area/go:
-  - "pkg/**/*"
-  - "cmd/**/*"
-  - "*.go"
+area/ansible:
+  - "ansible/*.go"
+
+area/cloudflare:
+  - "cloudflare/*.go"
+
+area/dev:
+  - "dev/**/*.go"
+
+area/file:
+  - "file/*.go"
+
+area/git:
+  - "git/*.go"
+
+area/keeper:
+  - "keeper/*.go"
+
+area/logging:
+  - "logging/*.go"
+
+area/macos:
+  - "macos/*.go"
+
+area/net:
+  - "net/*.go"
+
+area/str:
+  - "str/*.go"
+
+area/sys:
+  - "sys/*.go"
+
+area/web:
+  - "web/*.go"
+  - "web/cdpchrome/*.go"
+
+area/magefiles:
   - "magefiles/*"
+
+area/go-mod-sum:
   - "go.mod"
   - "go.sum"
-
-area/mage:
-  - "magefiles/*"
