--- a/.github/labels.yaml
+++ b/.github/labels.yaml
@@ -8,10 +8,62 @@
   color: "BC9BE3"
   description: >-
     Changes made to pre-commit hooks
-- name: area/go
+- name: area/ansible
   color: "7BD7E0"
   description: >-
-    Changes made to go resources
+    Changes made to Ansible resources
+- name: area/cloudflare
+  color: "7BD7E0"
+  description: >-
+    Changes made to Cloudflare resources
+- name: area/dev
+  color: "7BD7E0"
+  description: >-
+    Changes made to dev resources
+- name: area/file
+  color: "7BD7E0"
+  description: >-
+    Changes made to file resources
+- name: area/git
+  color: "7BD7E0"
+  description: >-
+    Changes made to Git resources
+- name: area/keeper
+  color: "7BD7E0"
+  description: >-
+    Changes made to Keeper resources
+- name: area/logging
+  color: "7BD7E0"
+  description: >-
+    Changes made to Logging resources
+- name: area/macos
+  color: "7BD7E0"
+  description: >-
+    Changes made to MacOS resources
+- name: area/net
+  color: "7BD7E0"
+  description: >-
+    Changes made to network resources
+- name: area/str
+  color: "7BD7E0"
+  description: >-
+    Changes made to string resources
+- name: area/sys
+  color: "7BD7E0"
+  description: >-
+    Changes made to system resources
+- name: area/web
+  color: "7BD7E0"
+  description: >-
+    Changes made to web resources
+- name: area/magefiles
+  color: "7BD7E0"
+  description: >-
+    Changes made to Magefiles
+- name: area/go-mod-sum
+  color: "7BD7E0"
+  description: >-
+    Changes made to go.mod and go.sum
 
 # Renovate
 - name: renovate/container
