--- a/.github/workflows/goreleaser.yaml
+++ b/.github/workflows/goreleaser.yaml
@@ -21,6 +21,11 @@ jobs:
         with:
           go-version: "1.20"
 
+      # - name: Install changelog gh cli extension
+      #   run: gh extension install chelnak/gh-changelog
+      #   env:
+      #     GH_TOKEN: ${{ github.token }}
+
       - name: Fix GOPATH
         run: export PATH=$PATH:$(go env GOPATH)/bin
 
