--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -17,17 +17,21 @@ jobs:
       - name: Set up git repository
         uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
 
+      - name: Set up Python
+        uses: actions/setup-python@bd6b4b6205c4dbad673328db7b31b7fab9e241c0 # v4
+        with:
+          python-version: "3.x"
+
       - name: Set up Go
         uses: actions/setup-go@fac708d6674e30b6ba41289acaab6d4b75aa0753 # v4
         with:
           go-version: "1.20"
 
-      - name: Install homebrew
-        uses: homebrew/actions/setup-homebrew@master
+      - name: Install goreleaser
+        run: go install github.com/goreleaser/goreleaser@latest
 
-      - name: Install brew dependencies
-        run: |
-          brew install goreleaser pre-commit
+      - name: Install pre-commit
+        run: pip3 install pre-commit
 
       - name: Set git config
         run: |
@@ -41,11 +45,6 @@ jobs:
 
       - name: Install dependencies
         run: pip3 install keepercommander
-
-      - name: Install changelog gh cli extension
-        run: gh extension install chelnak/gh-changelog
-        env:
-          GH_TOKEN: ${{ github.token }}
 
       - name: Generate the coverage output
         run: |
