--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,7 @@ repos:
       - id: trailing-whitespace
       - id: check-added-large-files
       - id: detect-private-key
+        exclude: sys/sysutils_test.go
       - id: check-shebang-scripts-are-executable
 
   - repo: https://github.com/adrienverge/yamllint.git
@@ -18,11 +19,11 @@ repos:
       - id: yamllint
         entry: yamllint --strict -c .hooks/linters/yamllint.yaml
 
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.0-alpha.9-for-vscode
-    hooks:
-      - id: prettier
-        files: \.(json|md|yaml|yml)$
+  # - repo: https://github.com/pre-commit/mirrors-prettier
+  #   rev: v3.0.0-alpha.9-for-vscode
+  #   hooks:
+  #     - id: prettier
+  #       files: \.(json|md|yaml|yml)$
 
   - repo: https://github.com/jumanjihouse/pre-commit-hooks
     rev: 3.0.0
@@ -65,11 +66,17 @@ repos:
       - id: go-unit-tests
         name: Go unit tests
         language: script
-        entry: .hooks/go-unit-tests.sh all
+        entry: .hooks/go-unit-tests.sh coverage
         files: '\.go$'
 
       - id: go-vet
         name: Run go vet
         language: script
         entry: .hooks/go-vet.sh
+        files: '\.go$'
+
+      - id: generate-docs
+        name: Update package docs
+        language: script
+        entry: .hooks/generate-docs.sh
         files: '\.go$'
