--- a/.github/labels.yaml
+++ b/.github/labels.yaml
@@ -60,6 +60,10 @@
   color: "7BD7E0"
   description: >-
     Changes made to Magefiles
+- name: area/asdf
+  color: "F4D1B7"
+  description: >-
+    Changes made to asdf resources
 - name: area/go-mod-sum
   color: "7BD7E0"
   description: >-
