--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,4 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
@@ -9,7 +6,8 @@
       "type": "go",
       "request": "launch",
       "mode": "auto",
-      "program": "magefiles/mage_output_file.go",
+      "program": "${workspaceFolder}/magefiles/mage_output_file.go",
+      "args": ["generatePackageDocs"],
       // Pass magefile as a separate argument,
       // VSCode doesn't allow more than one file in "program".
       "buildFlags": "magefile.go",
