--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,11 +19,11 @@ repos:
       - id: yamllint
         entry: yamllint --strict -c .hooks/linters/yamllint.yaml
 
-  # - repo: https://github.com/pre-commit/mirrors-prettier
-  #   rev: v3.0.0-alpha.9-for-vscode
-  #   hooks:
-  #     - id: prettier
-  #       files: \.(json|md|yaml|yml)$
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.0.0-alpha.9-for-vscode
+    hooks:
+      - id: prettier
+        files: \.(json|yaml|yml)$
 
   - repo: https://github.com/codespell-project/codespell
     rev: v2.2.5
