Minor update to label

--- a/.github/labels.yaml
+++ b/.github/labels.yaml
@@ -60,14 +60,14 @@
   color: "7BD7E0"
   description: >-
     Changes made to Magefiles
-- name: area/asdf
-  color: "F4D1B7"
-  description: >-
-    Changes made to asdf resources
 - name: area/go-mod-sum
   color: "7BD7E0"
   description: >-
     Changes made to go.mod and go.sum
+- name: area/asdf
+  color: "F4D1B7" # orange
+  description: >-
+    Changes made to asdf resources
 
 # Renovate
 - name: renovate/container
