Update renovate to include merge_group; update matchUpdateTypes for autoMerge
https://docs.renovatebot.com/key-concepts/automerge/#github-merge-queue

--- a/.github/renovate/autoMerge.json5
+++ b/.github/renovate/autoMerge.json5
@@ -6,8 +6,8 @@
       "matchManagers": ["github-actions"],
       "matchDatasources": ["github-tags"],
       "automerge": true,
-      "automergeType": "pr",
-      "matchUpdateTypes": ["minor", "patch", "digest"]
+      "automergeType": "branch",
+      "matchUpdateTypes": ["area/*"]
     }
   ]
 }
