Exclude bats files from appropriate location in PC hook config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -75,6 +75,7 @@ repos:
       - id: script-must-have-extension
         name: Ensure shell scripts end with .sh
         types: [shell]
+        exclude: .bats
       - id: shellcheck
       - id: shfmt
       # Configuration in .mdlrc and .hooks/linters/mdstyle.rb
