--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -2,7 +2,11 @@
 name: Pre-Commit
 on:
   pull_request:
+    branches-ignore:
+      - "renovate/*"
   push:
+    branches-ignore:
+      - "renovate/*"
   # Run once a week (see https://crontab.guru)
   schedule:
     - cron: "0 0 * * 0"
