--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -2,11 +2,7 @@
 name: Pre-Commit
 on:
   pull_request:
-    branches-ignore:
-      - "renovate/*"
   push:
-    branches-ignore:
-      - "renovate/*"
   # Run once a week (see https://crontab.guru)
   schedule:
     - cron: "0 0 * * 0"
@@ -48,6 +44,9 @@ jobs:
           git config --global user.name "GitHub Action"
           git add go.mod go.sum magefiles/go.mod magefiles/go.sum
           git diff --quiet && git diff --staged --quiet || git commit -m "Update go.mod and go.sum"
+
+      - name: Make sure docs have been generated prior to push
+        run: bash .hooks/generate-docs.sh
 
       - name: Install pre-commit dependencies
         run: mage installDeps
