--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -6,6 +6,7 @@ on:
   # Run once a week (see https://crontab.guru)
   schedule:
     - cron: "0 0 * * 0"
+  workflow_dispatch:
 
 jobs:
   pre-commit:
