Update pre-commit hook

--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -56,5 +56,5 @@ jobs:
         working-directory: ${{ github.workspace }}
 
       - name: Run pre-commit
-        run: mage runPreCommit
+        run: pre-commit run -a
         working-directory: ${{ github.workspace }}
