--- a/.github/workflows/goreleaser.yaml
+++ b/.github/workflows/goreleaser.yaml
@@ -19,12 +19,12 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@93397bea11091df50f3d7e59dc26a7711a8bcfbe # v4
         with:
-          go-version: "1.20.5"
+          go-version: "1.21.0"
 
       # - name: Install changelog gh cli extension
       #   run: gh extension install chelnak/gh-changelog
       #   env:
-      #     GH_TOKEN: ${{ github.token }}
+      #     GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Fix GOPATH
         run: export PATH=$PATH:$(go env GOPATH)/bin
