Fixed doc generation
- Replace individual pre-commit steps with a single `mage runPreCommit` command in the workflow
- Remove lockfile handling from generate-docs.sh
- Simplify mage installation check and directory navigation
- Update .pre-commit-config.yaml to require serial execution

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -73,8 +73,7 @@ repos:
         name: Update package docs
         language: script
         entry: .hooks/generate-docs.sh
-        files: '\.go$'
-        stages: [commit]
+        require_serial: true
 
   - repo: https://github.com/jumanjihouse/pre-commit-hooks
     rev: 3.0.0
