--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -47,14 +47,8 @@ jobs:
           git diff --quiet && git diff --staged --quiet || \
             git commit -m "Update go.mod and go.sum"
 
-      - name: Make sure docs have been generated prior to push
-        run: bash .hooks/generate-docs.sh
-        working-directory: ${{ github.workspace }}
-
       - name: Install pre-commit dependencies
         run: mage installDeps
-        working-directory: ${{ github.workspace }}
 
       - name: Run pre-commit
-        run: pre-commit run -a
-        working-directory: ${{ github.workspace }}
+        run: mage runPreCommit
