--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Generate the coverage output
         run: |
-          bash .hooks/go-unit-tests.sh coverage
+          bash .hooks/run-go-tests.sh coverage
 
       - name: Send the coverage output
         uses: shogo82148/actions-goveralls@7b1bd2871942af030d707d6574e5f684f9891fb2 # v1
