--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -1,13 +1,14 @@
 ---
 name: Pre-Commit
 on:
-  push:
   pull_request:
+    types:
+      - opened
+      - synchronize
   # Run once a week (see https://crontab.guru)
   schedule:
     - cron: "0 0 * * 0"
   workflow_dispatch:
-
 jobs:
   pre-commit:
     name: Update pre-commit hooks and run pre-commit
@@ -34,7 +35,7 @@ jobs:
       - name: Install pre-commit
         run: pip3 install pre-commit
 
-      - name: Run go mod tidy - necessary to avoid errors with renovate PRs
+      - name: Run go mod tidy - necessary to avoid errors with renovatebot PRs
         run: |
           go mod tidy
           pushd magefiles; go mod tidy; popd
