Update renovate to better support golang

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -22,14 +22,17 @@
   "pre-commit": {
     "enabled": true
   },
+  "packageRules": [
+    {
+      "managers": ["gomod"],
+      "packagePatterns": ["*"],
+      "enabled": true
+    }
+  ],
   "regexManagers": [
     {
-      "fileMatch": [
-        ".sh$"
-      ],
-      "matchStrings": [
-        "go install (?<depName>[^@]+?)@(?<currentValue>[0-9.-a-zA-Z]+)"
-      ],
+      "fileMatch": [".sh$"],
+      "matchStrings": ["go install (?<depName>[^@]+?)@(?<currentValue>[0-9.-a-zA-Z]+)"],
       "datasourceTemplate": "go"
     }
   ]
