--- a/.github/workflows/meta-labeler.yaml
+++ b/.github/workflows/meta-labeler.yaml
@@ -2,19 +2,16 @@
 name: "Meta Labeler"
 on:
   workflow_dispatch:
-  pull_request_target:
-    types: ["opened", "synchronize"]
+  pull_request:
+    branches: ["main"]
 
 jobs:
   labeler:
-    runs-on: ubuntu-latest
     name: Labeler
-    permissions:
-      contents: read
-      pull-requests: write
+    runs-on: ubuntu-latest
     steps:
       - name: Labeler
         uses: actions/labeler@8558fd74291d67161a8a78ce36a881fa63b766a9 # v5.0.0
         with:
           configuration-path: .github/labeler.yaml
-          repo-token: ${{ secrets.BOT_TOKEN }}
+          repo-token: "${{ secrets.BOT_TOKEN }}"
