Update renovate and labeler actions to use github app instead of PAT

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -9,7 +9,6 @@
     ":enablePreCommit",
     ":automergeDigest",
     ":automergeBranch",
-    "github>l50/goutils//.github/renovate/autoMerge.json5",
     "helpers:pinGitHubActionDigests"
   ],
   "platform": "github",
@@ -27,6 +26,12 @@
       "matchManagers": ["gomod"],
       "matchPackagePatterns": ["*"],
       "enabled": true
+    },
+    {
+      "description": "Auto merge GitHub Actions",
+      "matchManagers": ["github-actions"],
+      "automerge": true,
+      "automergeType": "pr"
     }
   ],
   "customManagers": [
