--- a/.github/renovate/autoMerge.json5
+++ b/.github/renovate/autoMerge.json5
@@ -2,12 +2,11 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "packageRules": [
     {
-      "description": "Auto-merge container digests updates for trusted containers",
-      "matchDatasources": ["docker"],
+      "description": "Auto merge GitHub Actions",
+      "matchDatasources": ["gomod"],
       "automerge": true,
       "automergeType": "branch",
-      "matchUpdateTypes": ["digest"],
-      "matchPackagePatterns": ["ghcr.io/bjw-s", "ghcr.io/onedr0p"]
+      "matchUpdateTypes": ["digest"]
     },
     {
       "description": "Auto-merge GitHub Actions for minor and patch",
