Add exclude broken prettier pc hook to renovate rules

--- a/.github/renovate/autoMerge.json5
+++ b/.github/renovate/autoMerge.json5
@@ -15,6 +15,13 @@
       "automerge": true,
       "automergeType": "branch",
       "matchUpdateTypes": ["minor", "patch"]
+    },
+    {
+      "description": "Ignore updates for mirrors-prettier > prettier pre-commit hook",
+      "matchPackageNames": ["mirrors-prettier"],
+      "matchDepTypes": ["pre-commit"],
+      "excludePackagePatterns": ["prettier"],
+      "allowedVersions": "3.1.0"
     }
   ]
 }
