--- a/.github/renovate/autoMerge.json5
+++ b/.github/renovate/autoMerge.json5
@@ -1,27 +1,27 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "packageRules": [
+  $schema: "https://docs.renovatebot.com/renovate-schema.json",
+  packageRules: [
     {
-      "description": "Auto merge GitHub Actions",
-      "matchDatasources": ["gomod"],
-      "automerge": true,
-      "automergeType": "branch",
-      "matchUpdateTypes": ["digest"]
+      description: "Auto merge GitHub Actions",
+      matchDatasources: ["gomod"],
+      automerge: true,
+      automergeType: "branch",
+      matchUpdateTypes: ["digest"],
     },
     {
-      "description": "Auto-merge GitHub Actions for minor and patch",
-      "matchManagers": ["github-actions"],
-      "matchDatasources": ["github-tags"],
-      "automerge": true,
-      "automergeType": "branch",
-      "matchUpdateTypes": ["minor", "patch"]
+      description: "Auto-merge GitHub Actions for minor and patch",
+      matchManagers: ["github-actions"],
+      matchDatasources: ["github-tags"],
+      automerge: true,
+      automergeType: "branch",
+      matchUpdateTypes: ["minor", "patch"],
     },
     {
-      "description": "Ignore updates for mirrors-prettier > prettier pre-commit hook",
-      "matchPackageNames": ["mirrors-prettier"],
-      "matchDepTypes": ["pre-commit"],
-      "excludePackagePatterns": ["prettier"],
-      "allowedVersions": "3.1.0"
-    }
-  ]
+      description: "Ignore updates for mirrors-prettier > prettier pre-commit hook",
+      matchPackageNames: ["mirrors-prettier"],
+      matchDepTypes: ["pre-commit"],
+      excludePackagePatterns: ["prettier"],
+      allowedVersions: "3.1.0",
+    },
+  ],
 }
