--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,7 +20,7 @@ repos:
         entry: yamllint --strict -c .hooks/linters/yamllint.yaml
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.1.0
+    rev: v4.0.0-alpha.6
     hooks:
       - id: prettier
         files: \.(json|yaml|yml)$
@@ -43,6 +43,18 @@ repos:
       - id: go-critic
       - id: go-build
       - id: go-mod-tidy
+  
+  - repo: https://github.com/jumanjihouse/pre-commit-hooks
+    rev: 3.0.0
+    hooks:
+      - id: script-must-have-extension
+        name: Ensure shell scripts end with .sh
+        types: [shell]
+        exclude: .bats
+      - id: shellcheck
+      - id: shfmt
+      # Configuration in .mdlrc and .hooks/linters/mdstyle.rb
+      - id: markdownlint
 
   - repo: local
     hooks:
@@ -74,15 +86,3 @@ repos:
         language: script
         entry: .hooks/generate-docs.sh
         require_serial: true
-
-  - repo: https://github.com/jumanjihouse/pre-commit-hooks
-    rev: 3.0.0
-    hooks:
-      - id: script-must-have-extension
-        name: Ensure shell scripts end with .sh
-        types: [shell]
-        exclude: .bats
-      - id: shellcheck
-      - id: shfmt
-      # Configuration in .mdlrc and .hooks/linters/mdstyle.rb
-      - id: markdownlint
