--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -61,7 +61,7 @@ repos:
       - id: go-unit-tests
         name: Go unit tests
         language: script
-        entry: .hooks/run-go-tests.sh coverage
+        entry: .hooks/run-go-tests.sh modified
         files: '\.go$'
 
       - id: go-vet
