Fixed renovate config errors

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -9,39 +9,36 @@
     ":enablePreCommit",
     ":automergeDigest",
     ":automergeBranch",
-    "helpers:pinGitHubActionDigests",
+    "helpers:pinGitHubActionDigests"
   ],
-  platform: "github",
-  onboarding: false,
-  requireConfig: "optional",
   dependencyDashboardTitle: "Renovate Dashboard 🤖",
   suppressNotifications: ["prIgnoreNotification"],
   rebaseWhen: "conflicted",
   commitBodyTable: true,
   "pre-commit": {
-    enabled: true,
+    enabled: true
   },
   packageRules: [
     {
       matchManagers: ["gomod"],
       matchPackagePatterns: ["*"],
-      enabled: true,
+      enabled: true
     },
     {
       description: "Auto merge GitHub Actions",
       matchManagers: ["github-actions"],
       automerge: true,
-      automergeType: "pr",
-    },
+      automergeType: "pr"
+    }
   ],
   customManagers: [
     {
       customType: "regex",
       fileMatch: [".sh$"],
       matchStrings: [
-        "go install (?<depName>[^@]+?)@(?<currentValue>[0-9.-a-zA-Z]+)",
+        "go install (?<depName>[^@]+?)@(?<currentValue>[0-9.-a-zA-Z]+)"
       ],
-      datasourceTemplate: "go",
-    },
-  ],
+      datasourceTemplate: "go"
+    }
+  ]
 }
